--- a/css/styleff0b.css
+++ b/css/styleff0b.css
@@ -1911,13 +1911,12 @@ xxxl:   1600+
     max-width: 54rem;
     width: 100%;
     height: 36rem;
+    justify-content: center;
+    align-items: center;
+    display: block;
   }
   
-  @media (max-width: 768px) {
-    .window.copyright-window {
-      top: 23%;
-    }
-  }
+  
   
   .window.copyright-window header .title-bar .title {
     display: flex;
@@ -1982,16 +1981,12 @@ xxxl:   1600+
     max-width: 54rem;
     width: 100%;
     max-height: 60vh;
-    top: 50%;
-    left: 50%;
+    justify-content: center;
+    align-items: center;
+    display: block;
   }
   
-  @media (max-width: 768px) {
-    .window.subscribe-window {
-      left: 0;
-      top: 15rem;
-    }
-  }
+  
   
   .window.subscribe-window .window-content-area {
     display: flex;
@@ -2233,14 +2228,11 @@ xxxl:   1600+
     max-width: 54rem;
     width: 100%;
     max-height: 60vh;
-    left: 50%;
+    justify-content: center;
+    align-items: center;
+    display: block;
   }
   
-  @media (max-width: 768px) {
-    .window.music-window {
-      left: 0;
-    }
-  }
   
   .window.music-window .window-content .window-content-area {
     overflow-y: scroll;
@@ -2485,16 +2477,12 @@ xxxl:   1600+
     max-width: 54rem;
     width: 100%;
     max-height: 60vh;
-    top: 50%;
-    left: 50%;
+    justify-content: center;
+    align-items: center;
+    display: block;
   }
   
-  @media (max-width: 768px) {
-    .window.videos-window {
-      left: 0;
-      top: 15rem;
-    }
-  }
+  
   
   .window.videos-window .window-content-area {
     display: flex;
