--- a/css/styleff0b.css
+++ b/css/styleff0b.css
@@ -66,8 +66,8 @@
   .font-loop {
     margin-top: 7rem;
     position: relative;
-    font-size: 1.6rem;
-    font-weight: bold;
+    font-size: 2.5rem;
+    font-weight: bolder;
     text-align: center;
   }
   
